--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -10,7 +10,7 @@
 
 body {
     font-size: 14px;
-    font-family: "Microsoft YaHei" sans-serif;
+    font-family: "Microsoft YaHei"  sans-serif;
     color: #000;
 }
 
@@ -129,15 +129,20 @@ textarea {
     height: 100%;
     text-align: center;
 }
+.fixBottomBox .tabItem a label{
+  display: block;
+  margin-top: 2px;
+  font-size: 12px;
+}
 
 .tabItem .tab-item-link {
-    display: inline-flex;
+    display: block;
     width: 70px;
     height: 50px;
 }
 
 .tabItem .tab-item-link .tab-item-icon {
-    display: inline-flex;
+    display: block;
     width: 100%;
     height: auto;
 
@@ -145,6 +150,7 @@ textarea {
 }
 
 
-.active i,.active label{
-   color: #f60;
+.active i,
+.active label{
+   color: #f40;
 }
