--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -43,7 +43,7 @@ textarea {
 }
 
 [class^='icon'] {
-    /*background: url("../images/sprites.png") no-repeat;*/
+    background: url("../images/sprites.png") no-repeat;
     background-size: 200px 200px;
 }
 
@@ -55,6 +55,8 @@ textarea {
     border-bottom: 1px solid #bfbfbf;
     position: fixed;
     z-index: 2;
+    opacity: 0.6;
+    /*background-color:rgba(255, 255, 255, 0.3);*/
 }
 
 .top_bar .icon_back {
