--- a/src/assets/css/detail.css
+++ b/src/assets/css/detail.css
@@ -16,7 +16,7 @@ body {
 }
 
 .banner_box .banner_child_box {
-    width: 1000%;
+    width: 100%;
     height: 375px;
     position: relative;
     left: 0;
@@ -43,7 +43,7 @@ body {
     max-width: 100%;
     max-height: 100%;
     display: block;
-    overflow: hidden
+    overflow: hidden;
 }
 
 .banner_box .banner_count {
