--- a/src/assets/css/detail.css
+++ b/src/assets/css/detail.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #F0F2F5;
+    background-color: #F0F2F5;/*#F0F2F5*/
 }
 
 .detail_box {
@@ -16,7 +16,7 @@ body {
 }
 
 .banner_box .banner_child_box {
-    width: 100%;
+    width: 1000%;
     height: 375px;
     position: relative;
     left: 0;
@@ -33,8 +33,8 @@ body {
     background-color: #fff;
     background-size: 100% 100%;
     transition: all 0ms ease;
-    height: 375px;
-    width: 375px;
+    height: 400px;
+    width: 410px;
     transform: translate3d(0px, 0px, 0px);
     z-index: 10;
 }
@@ -43,7 +43,7 @@ body {
     max-width: 100%;
     max-height: 100%;
     display: block;
-    overflow: hidden;
+    overflow: hidden
 }
 
 .banner_box .banner_count {
