--- a/src/assets/css/searchpage.css
+++ b/src/assets/css/searchpage.css
@@ -18,6 +18,7 @@ body {
     width: 100%;
     height: 40px;
     z-index: 2;
+  opacity: 1;
 }
 
 .h_layout .search_condition {
@@ -99,15 +100,20 @@ li em {
 
 .goods_item_link .goods_item_pic {
     display: inline-block;
+  position: absolute;
+  left: 0;
+  top: 0;
     width: 100px;
     height: 100px;
 }
 
 .goods_item_link .goods_right {
-    position: absolute;
-    left: 104px;
-    top: 0;
-    height: 100%;
+  position: absolute;
+  text-align: left;
+  left: 104px;
+  top: 0;
+  height: 100%;
+  width:70%;
 }
 
 .goods_right .pp_name {
